# arizona

./: .editorconfig  .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
cli/: package.json  tsconfig.json
cli/src/: index.ts
compiler/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
compiler/scripts/: generate-diagnostics.ts
compiler/src/: index.ts  types.ts
compiler/src/__tests__/: index.ts
compiler/src/codegen/: index.ts  types.ts
compiler/src/codegen/__tests__/: codegen.spec.ts
compiler/src/common/: source.ts  transform.ts  traverse.ts  types.ts
compiler/src/common/__tests__/: source.spec.ts
compiler/src/diagnostics/: generated.ts  index.ts  messages.json  types.ts
compiler/src/diagnostics/__tests__/: index.spec.ts
compiler/src/parser/: grammar.ne  grammar.ts  index.ts  lexer.ts  syntax.ts  tokens.ts  types.ts
compiler/src/parser/grammar/: use.ne  (+3 more)
compiler/src/semantics/: index.ts  symtab.ts  types.ts
examples/fibonacci/: fib.az  fib.wasm  fib.wat  index.html
examples/mandelbrot/: compile  index.html  mandel.az  mandel.wasm  mandel.wat
playground/: package.json  tailwind.config.js
playground/public/: index.html
playground/src/: App.css  App.tsx
playground/src/json/: examples.json
samples/: fibonacci.az
src/: lib.rs
src/common/: mod.rs  source.rs  span.rs
src/compiler/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  syntax_error.rs  token.rs
src/compiler/snapshots/: arizona__compiler__parser__test__local_decl.snap  arizona__compiler__parser__test__local_int_init.snap
(+5 files in other folders)
