[package]
name = "arizona"
version = "0.1.0"
authors = ["Kosi Nwabueze <kosinwabueze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
maplit = "1.0.2"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
termcolor = "*"
rustyline = "7.1.0"